--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ input[type=submit]:hover {
       <img src="Untitled.png" style="width:100%">
     </div>
     <div class="column">
-      <form action="/action_page.php">
+      <form method="post" data-netlify="true" name="contact" netlify>
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
         <label for="lname">Last Name</label>
